--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,26 +8,21 @@ edition = "2021"
 [dependencies]
 tracing = "^0.1"
 tracing-subscriber = "^0.3"
-tracing-futures = "^0.2"
 dotenv = "0.15.0"
-songbird = '^0.3.2'
 serde_json = "1.0.100"
 serde = "1.0.189"
-once_cell = "1.18.0"
 rand = "0.8.5"
 chrono = "0.4.31"
-uuid = "1.5.0"
 regex = "1.10.2"
 async-trait = "0.1.74"
-
-[dependencies.serenity]
-version = "^0.11.7"
-# features = ["client", "standard_framework", "voice", "rustls_backend", "utils", "builder", "chrono"]
-
-[dependencies.tokio]
-version = "^1.34"
-features = ["macros", "rt-multi-thread", "signal"]
-
-[dependencies.youtube_dl]
-version = "0.9.0"
-features = ["tokio"]
+serenity = "^0.12"
+tokio = { version = "^1.33", features = [
+    "macros",
+    "rt-multi-thread",
+    "signal",
+    "tracing",
+] }
+youtube_dl = { version = "0.9.0", features = ["tokio"] }
+songbird = { version = "^0.4.0", features = ["serenity", "driver"] }
+symphonia = { version = "^0.5", features = ["aac", "alac", "isomp4", "mp3"] }
+reqwest = "^0.11"
