--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,21 @@ edition = "2021"
 [dependencies]
 tracing = "^0.1"
 tracing-subscriber = "^0.3"
-dotenv = "0.15.0"
-serde_json = "1.0.114"
-serde = "1.0.189"
-rand = "0.8.5"
-chrono = "0.4.31"
-regex = "1.10.2"
-async-trait = "0.1.74"
+dotenv = "^0.15"
+serde_json = "^1.0"
+serde = "^1.0"
+rand = "^0.8"
+chrono = "^0.4"
+regex = "^1.10"
+async-trait = "^0.1"
 serenity = "^0.12"
-tokio = { version = "^1.33", features = [
+tokio = { version = "^1.36", features = [
     "macros",
     "rt-multi-thread",
     "signal",
     "tracing",
 ] }
-youtube_dl = { version = "0.9.0", features = ["tokio"] }
+youtube_dl = { version = "^0.9", features = ["tokio"] }
 songbird = { version = "^0.4.0", features = ["serenity", "driver"] }
-symphonia = { version = "^0.5", features = ["aac", "alac", "isomp4", "mp3"] }
+symphonia = { version = "^0.5", features = ["all"] }
 reqwest = "^0.11"
