--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,7 +18,7 @@ env:
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
   RUST_BACKTRACE: 1
-  CARGO_HOME: ~/.cargo
+  CARGO_HOME: /cargo
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.event.pull_request.number || 'main'}}
@@ -26,7 +26,7 @@ concurrency:
 
 jobs:
   test:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -34,13 +34,13 @@ jobs:
       - name: Cache
         uses: actions/cache@v4
         with:
-          path: ~/.cargo
+          path: ${{ env.CARGO_HOME }}
           key: ${{ runner.os }}-cache-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install dependencies
         run: |
           sudo apt-get update -y
-          sudo apt-get upgrade -y
+          # sudo apt-get upgrade -y
           sudo apt-get install -y curl python3 ffmpeg
 
           sudo curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /bin/yt-dlp
