--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -70,7 +70,9 @@ jobs:
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
-        uses: sigstore/cosign-installer@3.0.4
+        uses: sigstore/cosign-installer@v3.5.0
+        with:
+          cosign-release: v2.2.4
 
       # Set up BuildKit Docker container builder to be able to build
       # multi-platform images and export cache
